--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.2.7
 Django==3.0.6
+django-appconf==1.0.4
+django-mediumeditor==1.0.0
 psycopg2-binary==2.8.5
 pytz==2020.1
 sqlparse==0.3.1
